[gd_scene load_steps=14 format=3 uid="uid://bofa5gbtdv4ai"]

[ext_resource type="Script" path="res://mutiPlay/Game.gd" id="1_ghdob"]
[ext_resource type="Texture2D" uid="uid://dxdl6vw4l7vct" path="res://asset/images/background/background3.png" id="2_4hc3b"]
[ext_resource type="StyleBox" uid="uid://o1o3o7gb6laq" path="res://asset/styles/back.tres" id="3_vrig8"]
[ext_resource type="FontFile" uid="uid://5jgfpl817j6v" path="res://asset/font/上首至尊书法体.ttf" id="4_0di80"]
[ext_resource type="Texture2D" uid="uid://bxeryet285kxb" path="res://asset/images/btn_lanscape.png" id="4_84enh"]
[ext_resource type="StyleBox" uid="uid://dxwiyveh3658y" path="res://mutiPlay/match_btn.tres" id="5_15kch"]
[ext_resource type="Texture2D" uid="uid://btre8thr7psfb" path="res://asset/images/textedit.png" id="6_c0l20"]
[ext_resource type="Texture2D" uid="uid://c12o3xuoy7wk" path="res://asset/images/MuTips.jpg" id="8_rh0s7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n2u56"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jk0wg"]
texture = ExtResource("4_84enh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3rl00"]
texture = ExtResource("6_c0l20")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qho2w"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w2re8"]
texture = ExtResource("8_rh0s7")

[node name="Game" type="Node2D"]
script = ExtResource("1_ghdob")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1284.0
offset_bottom = 720.0
texture = ExtResource("2_4hc3b")

[node name="logOut" type="Button" parent="."]
offset_left = 1120.0
offset_top = 52.0
offset_right = 1216.0
offset_bottom = 139.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = ExtResource("3_vrig8")
theme_override_styles/pressed = ExtResource("3_vrig8")
text = "返回"

[node name="GamePanel" type="Panel" parent="."]
visible = false
offset_left = 3.0
offset_top = 10.0
offset_right = 1274.0
offset_bottom = 635.0
theme_override_styles/panel = SubResource("StyleBoxTexture_n2u56")

[node name="timeControl" type="Timer" parent="GamePanel"]

[node name="Q&A" type="Panel" parent="GamePanel"]
layout_mode = 0
offset_left = 246.0
offset_top = 74.0
offset_right = 1047.0
offset_bottom = 521.0
theme_override_styles/panel = SubResource("StyleBoxTexture_jk0wg")

[node name="question" type="Label" parent="GamePanel/Q&A"]
layout_mode = 0
offset_left = 14.0
offset_top = 7.0
offset_right = 720.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(0.25098, 0.0392157, 0.329412, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_0di80")
theme_override_font_sizes/font_size = 70
text = "问题"
autowrap_mode = 1

[node name="answer" type="TextEdit" parent="GamePanel/Q&A"]
layout_mode = 0
offset_left = 20.0
offset_top = 326.0
offset_right = 524.0
offset_bottom = 402.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_readonly_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0di80")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_3rl00")
placeholder_text = "请输入您的答案"

[node name="commit" type="Button" parent="GamePanel/Q&A"]
layout_mode = 0
offset_left = 618.0
offset_top = 276.0
offset_right = 755.0
offset_bottom = 406.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("5_15kch")
theme_override_styles/pressed = ExtResource("5_15kch")
theme_override_styles/focus = ExtResource("5_15kch")
text = "提交"

[node name="tips_isRight" type="Label" parent="GamePanel/Q&A"]
visible = false
layout_mode = 0
offset_left = 51.0
offset_top = 418.0
offset_right = 246.0
offset_bottom = 444.0
text = "回答错误"

[node name="Life1" type="ProgressBar" parent="GamePanel"]
custom_minimum_size = Vector2(30, 200)
layout_mode = 0
offset_left = 194.0
offset_top = 211.0
offset_right = 224.0
offset_bottom = 411.0
theme_override_styles/fill = SubResource("StyleBoxFlat_qho2w")
value = 100.0
fill_mode = 3
show_percentage = false

[node name="Life2" type="ProgressBar" parent="GamePanel"]
custom_minimum_size = Vector2(30, 200)
layout_mode = 0
offset_left = 1111.0
offset_top = 198.0
offset_right = 1141.0
offset_bottom = 398.0
theme_override_styles/fill = SubResource("StyleBoxFlat_qho2w")
value = 100.0
fill_mode = 3
show_percentage = false

[node name="timePanel" type="Label" parent="GamePanel"]
layout_mode = 0
offset_left = 971.0
offset_top = 85.0
offset_right = 1034.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(1, 0.396078, 0.329412, 1)
theme_override_colors/font_shadow_color = Color(1, 0.396078, 0.329412, 1)
theme_override_colors/font_outline_color = Color(1, 0.396078, 0.329412, 1)
theme_override_font_sizes/font_size = 40
text = "10"

[node name="startMatch" type="Button" parent="."]
offset_left = 411.0
offset_top = 65.0
offset_right = 814.0
offset_bottom = 483.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.407843, 0.407843, 0.407843, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0di80")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("5_15kch")
theme_override_styles/hover = ExtResource("5_15kch")
theme_override_styles/pressed = ExtResource("5_15kch")
theme_override_styles/focus = ExtResource("5_15kch")
text = "   匹
    配"
alignment = 0

[node name="stopMatch" type="Button" parent="."]
visible = false
offset_left = 416.0
offset_top = 61.0
offset_right = 819.0
offset_bottom = 479.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.407843, 0.407843, 0.407843, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0di80")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("5_15kch")
theme_override_styles/hover = ExtResource("5_15kch")
theme_override_styles/pressed = ExtResource("5_15kch")
theme_override_styles/focus = ExtResource("5_15kch")
text = "  停止
   匹配"
alignment = 0

[node name="selfName" type="Label" parent="."]
offset_left = 194.0
offset_top = 530.0
offset_right = 312.0
offset_bottom = 577.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0di80")
theme_override_font_sizes/font_size = 40
text = "名称:"

[node name="enemyName" type="Label" parent="."]
offset_left = 1016.0
offset_top = 524.0
offset_right = 1134.0
offset_bottom = 571.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0di80")
theme_override_font_sizes/font_size = 40
text = "名称:"

[node name="selfScore" type="Label" parent="."]
offset_left = 198.0
offset_top = 606.0
offset_right = 316.0
offset_bottom = 653.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0di80")
theme_override_font_sizes/font_size = 40
text = "分数:"

[node name="enemyScore" type="Label" parent="."]
offset_left = 1019.0
offset_top = 594.0
offset_right = 1137.0
offset_bottom = 641.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0di80")
theme_override_font_sizes/font_size = 40
text = "分数:"

[node name="tip_round" type="Panel" parent="."]
visible = false
offset_left = 247.0
offset_top = 81.0
offset_right = 1047.0
offset_bottom = 509.0
theme_override_styles/panel = SubResource("StyleBoxTexture_w2re8")

[node name="info" type="Label" parent="tip_round"]
layout_mode = 0
offset_left = 110.0
offset_top = 152.0
offset_right = 618.0
offset_bottom = 224.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "回答正确攻击敌方20血"

[node name="tip_ending" type="Panel" parent="."]
visible = false
offset_left = 247.0
offset_top = 81.0
offset_right = 1047.0
offset_bottom = 509.0
theme_override_styles/panel = SubResource("StyleBoxTexture_w2re8")

[node name="Label" type="Label" parent="tip_ending"]
layout_mode = 0
offset_left = 110.0
offset_top = 152.0
offset_right = 618.0
offset_bottom = 224.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "游戏结束"

[node name="matchTime" type="Label" parent="."]
visible = false
offset_left = 780.0
offset_top = 382.0
offset_right = 917.0
offset_bottom = 432.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "1"
horizontal_alignment = 2

[node name="matchTimer" type="Timer" parent="."]

[connection signal="pressed" from="logOut" to="." method="_on_logout_pressed"]
[connection signal="timeout" from="GamePanel/timeControl" to="." method="_on_time_control_timeout"]
[connection signal="pressed" from="GamePanel/Q&A/commit" to="." method="_on_commit_pressed"]
[connection signal="pressed" from="startMatch" to="." method="_on_start_match"]
[connection signal="pressed" from="stopMatch" to="." method="_on_stop_match"]
[connection signal="timeout" from="matchTimer" to="." method="_on_match_timer_timeout"]
